@@ -535,14 +535,7 @@ link-extra-libs-bounded = $(link-extra-libs)
 endif
 
 # The static libraries.
-ifeq (yes,$(build-static))
 link-libc-static = -Wl,--start-group $(common-objpfx)libc.a $(static-gnulib) -Wl,--end-group
-else
-ifeq (yes,$(build-shared))
-# We can try to link the programs with lib*_pic.a...
-link-libc-static = $(static-gnulib) $(common-objpfx)libc_pic.a
-endif
-endif
 link-libc-bounded = $(common-objpfx)libc_b.a $(gnulib) $(common-objpfx)libc_b.a
 
 ifndef gnulib
@@ -721,10 +714,8 @@ all-object-suffixes := .o .os .op .og .ob .oS
 object-suffixes :=
 CPPFLAGS-.o = $(pic-default)
 CFLAGS-.o = $(filter %frame-pointer,$(+cflags))
-ifeq (yes,$(build-static))
 libtype.o := lib%.a
 object-suffixes += .o
-endif
 ifeq (yes,$(build-shared))
 # Under --enable-shared, we will build a shared library of PIC objects.
 # The PIC object files are named foo.os.
