@@ -88,7 +88,6 @@ sizeof-long-double = @sizeof_long_double@
 nss-crypt = @libc_cv_nss_crypt@
 
 # Configuration options.
-build-static = @static@
 build-shared = @shared@
 build-pic-default= @libc_cv_pic_default@
 build-profile = @profile@
