@@ -112,16 +112,6 @@ AC_ARG_ENABLE([check-abi],
 	      [enable_check_abi=$enableval],
 	      [enable_check_abi=no])
 
-dnl Arguments to enable or disable building the static, shared, profiled,
-dnl and -fomit-frame-pointer libraries.
-dnl I've disabled this for now since we cannot build glibc without static
-dnl libraries built in the moment.
-dnl AC_ARG_ENABLE([static],
-dnl               AC_HELP_STRING([--enable-static],
-dnl                              [build static library @<:@default=yes@:>@]),
-dnl               [static=$enableval],
-dnl               [static=yes])
-static=yes
 AC_ARG_ENABLE([shared],
 	      AC_HELP_STRING([--enable-shared],
 			     [build shared library @<:@default=yes if GNU ld@:>@]),
