@@ -1,4 +1,4 @@
-# Copyright (C) 1996-2006,2011 Free Software Foundation, Inc.
+# Copyright (C) 1996-2006,2011,2012 Free Software Foundation, Inc.
 # This file is part of the GNU C Library.
 
 # The GNU C Library is free software; you can redistribute it and/or
@@ -199,12 +199,7 @@ ifeq ($(build-bounded),yes)
 $(tests:%=$(objpfx)%-bp): $(objpfx)libm_b.a
 endif
 
-ifeq ($(build-static),yes)
-o = .o
-else
-o = .os
-endif
-gmp-objs = $(patsubst %,$(common-objpfx)stdlib/%$o,\
+gmp-objs = $(patsubst %,$(common-objpfx)stdlib/%.o,\
 		      add_n sub_n cmp addmul_1 mul_1 mul_n divmod_1 \
 		      lshift rshift mp_clz_tab udiv_qrnnd inlines)
 $(objpfx)atest-exp: $(gmp-objs)
